objects/Proposal__c.object
<CustomObject>
    <fields>
        <fullName>Bid_Manager__c</fullName>
        <description>06/16/2015 - Added for bids team.</description>
        <label>Bid Manager</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Geoff Howells</fullName>
                </value>
                <value>
                    <fullName>Hal York</fullName>
                </value>
                <value>
                    <fullName>Lane Lobaugh</fullName>
                </value>
                <value>
                    <fullName>Lynn Hines</fullName>
                </value>
                <value>
                    <fullName>Prue Mair</fullName>
                </value>
                <value>
                    <fullName>RSM</fullName>
                </value>
                <value>
                    <fullName>Sharon Marshall</fullName>
                </value>
                <value>
                    <fullName>Tom Watts</fullName>
                </value>
                <value>
                    <fullName>Vimala Bari</fullName>
                </value>
                <value>
                    <fullName>Wolfram Hedewig</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <description>JTK 05/03/2015 - added for proposals</description>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reactive</fullName>
                </value>
                <value>
                    <fullName>Proactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dependencies__c</fullName>
        <label>Dependencies</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Documents_Received__c</fullName>
        <description>05/03/2015 - JTK added for Approvals.</description>
        <label>Documents Received</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent via Email</fullName>
                </value>
                <value>
                    <fullName>FTP download coordinates provided</fullName>
                </value>
                <value>
                    <fullName>Online RFx Coordinates provided</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FolderId__c</fullName>
        <description>Used for Box Integration - Sami was here</description>
        <label>FolderId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Budget_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Budget Approval?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>History_Customer_Relationship__c</fullName>
        <label>History / Customer Relationship</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incumbent__c</fullName>
        <description>JTK 05/03/2015 - Added for proposals</description>
        <label>Incumbent</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Step_to_Close__c</fullName>
        <label>Next Step to Close</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Proposals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Other_Info_Details_Comments__c</fullName>
        <label>Other Info, Details, Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Required_Deliverables__c</fullName>
        <label>Required Deliverables</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full RFx Response</fullName>
                </value>
                <value>
                    <fullName>Packaged Proposal (RFx-like)</fullName>
                </value>
                <value>
                    <fullName>Drawning/BOM for SI Support</fullName>
                </value>
                <value>
                    <fullName>Qualification Questionnaire</fullName>
                </value>
                <value>
                    <fullName>Financial Package</fullName>
                </value>
                <value>
                    <fullName>SOW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk__c</fullName>
        <description>05/03/2015 - JTK Added for proposals.</description>
        <label>Risk</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non-Standard T&amp;Cs</fullName>
                </value>
                <value>
                    <fullName>Product Development</fullName>
                </value>
                <value>
                    <fullName>Technical Non-Compliance</fullName>
                </value>
                <value>
                    <fullName>Timeline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risks__c</fullName>
        <label>Risk Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>No Bid</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Re-tendered</fullName>
                </value>
                <value>
                    <fullName>Win</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tender_Type__c</fullName>
        <label>Tender Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RFP</fullName>
                </value>
                <value>
                    <fullName>RFI</fullName>
                </value>
                <value>
                    <fullName>RFQ</fullName>
                </value>
                <value>
                    <fullName>PQQ (Pre-Qualification Questionnaire)</fullName>
                </value>
                <value>
                    <fullName>SI RFP Support</fullName>
                </value>
                <value>
                    <fullName>Proposal (Non-RFx)</fullName>
                </value>
                <value>
                    <fullName>SOW</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Top_Tier_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Top Tier Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_RFP_Value__c</fullName>
        <description>The total value of the submission</description>
        <label>Total RFP Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Bids Proposals Engagements</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Opportunity__c</columns>
        <columns>Bid_Manager__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Other_Info_Details_Comments__c</columns>
        <columns>Required_Deliverables__c</columns>
        <columns>Risks__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,Active,Submitted,No Bid,On Hold,Cancelled,Re-tendered,Win,Lost</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Proposal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bids Proposals Engagements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>